Schedule bit done

--- a/TP3/dissertation/appendix/appendix.tex
+++ b/TP3/dissertation/appendix/appendix.tex
@@ -5,6 +5,9 @@
 \chapter{Use Cases}
 \input{appendix/cases.tex}
 
+\chapter{Orginisation}
+\input{appendix/schedule.tex}
+
 \chapter{Status Report}
 \input{appendix/status.tex}
 
