--- a/TP3/dissertation/appendix/schedule.tex
+++ b/TP3/dissertation/appendix/schedule.tex
@@ -2,11 +2,11 @@
 
 \section{Schedule}
 
-As with any software project, planning is an important aspect. As is to be expected from a group without much prior experience in teamwork, the original schedule was overly optimistic. Other course deadlines and a failure to appreciate the time requirements of each stage resulted in a failure to meet our planned deadlines. 
+As with any software project, planning is an important aspect. As is to be expected from a group without much prior experience in team work, the original schedule was overly optimistic. Other course deadlines and a failure to appriciate the time requirements of each stage resulted in a failure to meet our planned deadlines. 
 
 \begin{figure}[!h]
     \begin{center}
-        \includegraphics[width=7cm]{appendix/diagrams/GIMplan.png}
+        \includegraphics[width=14cm]{appendix/Diagrams/GIMplan.png}
         \caption{Gantt chart of our planned schedule.}
         \label{lockingDia}
     \end{center}
@@ -14,14 +14,14 @@ As with any software project, planning is an important aspect. As is to be expec
 
 \begin{figure}[!h]
     \begin{center}
-        \includegraphics[width=7cm]{appendix/diagrams/GIMreal.png}
+        \includegraphics[width=14cm]{appendix/Diagrams/GIMreal.png}
         \caption{Gantt chart of our actual schedule.}
         \label{lockingDia}
     \end{center}
 \end{figure}
 
-The process of designing the system took longer than was initially anticipated, which delayed the implementation process significantly. The implementation process for basic functionality went smoothly and was finished relatively quickly, however a significant amount of time was spent improving the interface and polishing the program.
+The process of designing the system took longer than was initially anticipated, which delayed the implementation process significantly. The implementation process for basic functionality went smoothly and was finished relatively quickly, however a large amount of time was spent improving the interface and polishing the program. Our original plan provided almost 2 months to write this dissertation, in reality we had only 1 month.  
 
-\section{Management}
+\section{Version Control}
 
-
+For this project we used version control to manage code and documentation. All internal documentation was hosted using Google Docs, while this document and the java code was managed using SVN provided by Google Code. Our project initally used the SVN provided by the Computing Science school in Glasgow University, however, due to stability and relability issues we moved our project to Google's infrastructure.
