Schedule talbes added, also 777...

--- a/TP3/dissertation/appendix/schedule.tex
+++ b/TP3/dissertation/appendix/schedule.tex
@@ -12,6 +12,25 @@ As with any software project, planning is an important aspect. As is to be expec
     \end{center}
 \end{figure}
 
+\begin{table}[!h]
+\begin{center}
+\caption{Planned dates for each stage of the development process}
+\begin{tabular}{ | p{4cm} |p{4cm}  |p{4cm} | } 
+    \hline
+    Reqirements & 21/09/10 & 25/10/10 \\
+    \hline
+    Design & 25/10/10 & 08/11/10 \\
+    \hline
+    Implementation & 08/11/10 & 31/01/11 \\
+    \hline
+    Dissertation & 31/01/11 & 20/03/11 \\
+    \hline
+\end{tabular}
+\end{center}
+\end{table}
+
+\pagebreak
+
 \begin{figure}[!h]
     \begin{center}
         \includegraphics[width=14cm]{appendix/Diagrams/GIMreal.png}
@@ -20,7 +39,24 @@ As with any software project, planning is an important aspect. As is to be expec
     \end{center}
 \end{figure}
 
-The process of designing the system took longer than was initially anticipated, which delayed the implementation process significantly. The implementation process for basic functionality went smoothly and was finished relatively quickly, however a large amount of time was spent improving the interface and polishing the program. Our original plan provided almost 2 months to write this dissertation, in reality we had only 1 month.  
+\begin{table}[!h]
+\begin{center}
+\caption{Dates acheived during the development process}
+\begin{tabular}{ | p{4cm} |p{4cm}  |p{4cm} | }
+    \hline
+    Reqirements & 21/09/10 & 25/10/10 \\
+    \hline
+    Design & 25/10/10 & 08/12/10 \\
+    \hline
+    Implementation & 08/12/10 & 21/02/11 \\
+    \hline
+    Dissertation & 21/02/11 & 20/03/11 \\
+    \hline
+\end{tabular}
+\end{center}
+\end{table}
+
+The process of designing the system took far longer than was initially anticipated, which delayed the implementation process significantly. The implementation for basic functionality went smoothly and was finished relatively quickly, however a large amount of time was spent improving the interface and polishing the program. Our original plan provided almost 2 months to write this dissertation, in reality we had only 1 month.  
 
 \section{Version Control}
 
