--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -12,19 +12,19 @@ Heather:
 
 Organisation: Quality Assurance, report editor. Planning. Internal meetings manager.
 Design: Interface design, requirements analysis, Client Structure
-Implementation: GUI Front end, some networking interface implementation
+Implementation: GUI Front end, GUI Backend (some networking interface implementation)
 Report: Introduction, Problem Definition, Conclusion. GUI Implementation section. Section introductions, section summaries. Editing. 
 
 Ewan:
 
 Design: Interface design, requirements analysis
-Documentation: Use cases, wire frames
+Documentation: Use cases, Interface Design (wire frames)
 Implementation: GUI Front end
 Report: Design of GUI, Requirements (features), Appendix 
 
 Gordon:
 
 Organisation: Team secretary
-Design: Client Structure, some contributions to Protocol Specification
-Implementation: Network Component, Gui Backend (model and controller: mainly creating windows, and routing messages to windows, and managing chats between clients)
-Report: Client Design, Networking Design, (Client Implementation), Evaluation
+Design: Client Structure, Network Component, some contributions to Protocol Specification
+Implementation: Network Component, Gui Backend (model and controller: creating windows, and routing messages to windows, and managing chats between clients)
+Report: Client Design, Networking Design, Client Implementation, Evaluation
