fixed wireframe position

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -90,7 +90,7 @@ The use of informal notation for the use cases was, in retrospect, ill-conceived
 
 With these use cases we started to design a GUI that could accommodate the desired features. Although many UI sketches were made, they were all minor variations on the core design which we derived from the traditional instant messenger model, such as used in Windows Live.
 
-\begin{figure}
+\begin{figure}[!h]
     \begin{center}
         \includegraphics[width=7cm]{Design/diagrams/Main_UI.png}
         \caption{The original wireframe for the main window of the client.}
@@ -128,7 +128,7 @@ With these use cases we started to design a GUI that could accommodate the desir
 
 The above wireframe is the main window the user will see after they have logged in. The layout is typical of instant messenger programs, and represents what users would expect to see.
 
-\begin{figure}
+\begin{figure}[!h]
     \begin{center}
         \includegraphics[width=7cm]{Design/diagrams/Chat_Box.png}
         \caption{The original wireframe design of a chat window for the client.}
