Some final edits in various sections.

--- a/TP3/dissertation/Design/server.tex
+++ b/TP3/dissertation/Design/server.tex
@@ -64,7 +64,7 @@ Each user has their own Friend List, a list of users who have accepted a friend 
 
 \subsection{Client-to-Client Messaging}
 \label{c2c}
-No direct client-to-client communication is possible. Instead workers are able to indirectly communicate with other clients (i.e. clients to which they are not connected) by passing commands to the other client's worker. This is the server's main method of inter-client communication and relies heavily on the use of the buffers to pass messages from one worker to the network writer or command processor of another worker. This was do so that a client's worker was able monitor everything sent to and received from the client and update their own internal status in a reliable manner.
+No direct client-to-client communication is possible. Instead, workers are able to indirectly communicate with other clients (i.e. clients to which they are not connected) by passing commands to the other client's worker. This is the server's main method of inter-client communication and relies heavily on the use of the buffers to pass messages from one worker to the network writer or command processor of another worker. This was done so that a client's worker is able to monitor everything to and from the client and update their own internal status in a reliable manner.
 
 As the protocol defines no client to client communication is possible before a user has logged in, and as user can only be logged in on one client at a time, only a user id is necessary to send a command to a user. As long as a record is kept of which worker belongs to each online user, then sending a message to a user is no more complicated than identifying the particular user.
 
@@ -85,7 +85,7 @@ One of the server's most critical responsibilities is notifying users of changes
 \item{Both the subscriber and subscribee are in the same room}
 \end{enumerate}
 
-When a user changes any piece of their user information such as their status, nickname, or personal message, the server needs to notify other clients so that they can update their information. The server generates a list of subscribers for this user and removes offline and blocked users. It then issues an \texttt{:UPDATE:} command to each of the clients, notifying them of the user and the piece of information which has been updated. Note that the server does not send the updated information, it merely notifies the client of the update, allowing it to request the updated information for the server when and if it needs it. For example, a client may not display users display pictures and sending the display picture every time a user changes it would be very wasteful in such a situation.
+When a user changes any piece of their user information such as their status, nickname, or personal message, the server needs to notify other clients so that they can update their information. The server generates a list of subscribers for this user and removes offline and blocked users. It then issues an \texttt{:UPDATE:} command to each of the clients, notifying them of the user and the piece of information which has been updated. Note that the server does not send the updated information, it merely notifies the client of the update, allowing it to request the updated information for the server when and if it needs it. For example, a client may not display users' display pictures, and sending the display picture every time a user changes it would be very wasteful in such a situation.
 
 Subscriptions are also used as a method of access control. A user is only able to request information about another user if they are subscribed to that user. This limitation means that a user is effectively granting another user access to read their information by adding them to their friend list. However, the converse is not true. Removing a user from your friend list does not remove their access to your information as they may still have you in their friend list. In order to combat this, you are able to block a user which removes this access to your information and status updates. This enhances privacy and gives the user control of who is able to access their data.
 
