--- a/TP3/dissertation/appendix/appendix.tex
+++ b/TP3/dissertation/appendix/appendix.tex
@@ -5,11 +5,11 @@
 \chapter{Use Cases}
 \input{appendix/cases.tex}
 
-\chapter{Orginisation}
+\chapter{Organisation}
 \input{appendix/schedule.tex}
 
 \chapter{Status Report}
 \input{appendix/status.tex}
 
-\chapter{Summary Log}
+\chapter{Contributions}
 \input{appendix/summarylog.tex}
