--- a/TP3/dissertation/appendix/schedule.tex
+++ b/TP3/dissertation/appendix/schedule.tex
@@ -56,8 +56,8 @@ As with any software project, planning is an important aspect. As is to be expec
 \end{center}
 \end{table}
 
-The process of designing the system took far longer than was initially anticipated, which delayed the implementation process significantly. The implementation for basic functionality went smoothly and was finished relatively quickly, however a large amount of time was spent improving the interface and polishing the program. Our original plan provided almost 2 months to write this dissertation, in reality we had only 1 month.  
+The process of designing the system took far longer than was initially anticipated, which delayed the implementation process significantly. The implementation for basic functionality went smoothly and was finished relatively quickly, however a large amount of time was spent improving the interface and polishing the program. Our original plan provided almost two months to write this dissertation, and in reality we had only one month.  
 
 \section{Version Control}
 
-For this project we used version control to manage code and documentation. All internal documentation was hosted using Google Docs, while this document and the java code was managed using SVN provided by Google Code. Our project initally used the SVN provided by the Computing Science school in Glasgow University, however, due to stability and relability issues we moved our project to Google's infrastructure.
+For this project we used version control to manage code and documentation. All internal documentation was hosted using Google Docs, while this document and the Java code was managed using SVN provided by Google Code. Our project initially used the SVN provided by the Computing Science school of Glasgow University, but due to stability and reliability issues we moved our project to Google's infrastructure.
