--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -1,30 +1,29 @@
-\section{Summary Log}
 \label{sumlog}
 
-James:
+{\bf James}:
 
-Organisation: Version Control, Server Hosting
+Organisation: Version control, server hosting
 Design: Server design, protocol specification architect
-Implementation: Server, GUI Friend List JList renderer. GUI User data listeners.
-Report: Protocol Design, Server Design + Implementation
+Implementation: Server, GUI friend list JList renderer, GUI user data listeners.
+Report: Protocol design, server design, server implementation, protocol spec in appendix
 
-Heather:
+{\bf Heather}:
 
-Organisation: Quality Assurance, report editor. Planning. Internal meetings manager.
-Design: Interface design, requirements analysis, Client Structure
-Implementation: GUI Front end, GUI Backend (some networking interface implementation)
-Report: Introduction, Problem Definition, Conclusion. GUI Implementation section. Section introductions, section summaries. Editing. 
+Organisation: Quality assurance, report editor, planner, internal meetings manager.
+Design: Interface design, requirements analysis, client structure
+Implementation: GUI front-end, GUI back-end (some networking interface implementation)
+Report: Introduction, problem definition, conclusion, GUI implementation section, chapter introductions, chapter summaries, editing. 
 
-Ewan:
+{\bf Ewan}:
 
 Design: Interface design, requirements analysis
-Documentation: Use cases, Interface Design (wire frames)
-Implementation: GUI Front end
-Report: Design of GUI, Requirements (features), Appendix 
+Documentation: Use cases, interface design (wire frames)
+Implementation: GUI front-end
+Report: Design of GUI, features, appendix
 
-Gordon:
+{\bf Gordon}:
 
 Organisation: Team secretary
-Design: Client Structure, Network Component, some contributions to Protocol Specification
-Implementation: Network Component, Gui Backend (model and controller: creating windows, and routing messages to windows, and managing chats between clients)
-Report: Client Design, Networking Design, Client Implementation, Evaluation
+Design: Client structure, network component, some contributions to protocol specification
+Implementation: Network component, GUI back-end (model and controller: creating windows, routing messages to windows, and managing chats between clients)
+Report: Client design, networking design, client implementation, evaluation
