Fixed sentence in networking design and organized contributions section.

--- a/TP3/dissertation/Design/networking.tex
+++ b/TP3/dissertation/Design/networking.tex
@@ -5,7 +5,7 @@ We determined the role of the client networking component to be maintaining a co
 
 \subsection {Maintaining a Connection}
 
-The connection to the server had to be designed such that our program could both freely write to the socket and receive commands without having to worry about concurrency. For example, the client should not have to worry about doing multiple writes to the server (or possibly simultaneous ones if there are any multithreaded aspects to its operations), or waiting for these actions to complete. ***The following sentence needs reworking*** With these considerations in mind, we had to design our component to manage the connection so that the socket would not be written to while a read or write was in progress, while accommodating multiple requests.*** We had to implement this management in a way that these operations would be hidden from the client.
+The connection to the server had to be designed such that our program could both freely write to the socket and receive commands without having to worry about concurrency. For example, the client should not have to worry about doing multiple writes to the server (or possibly simultaneous ones if there are any multithreaded aspects to its operations), or waiting for these actions to complete. With these considerations in mind, we had to design our component so that the socket would not be written to while a read or write was in progress. At the same time, it had to accommodate multiple requests. We had to implement this management in a way that these operations would be hidden from the client.
 
 Our design ended up as follows. Writing to the network is handled by a thread that monitors the buffer for any commands to send to the server. Commands can accumulate in this buffer so that the client does not have to wait till a command has completed sending to continue its operations. As the methods in the buffer are synchronised, it is ensured that data remains in a consistent state, and that commands are sent sequentially. This is particularly important since the networking code uses this buffer to write to the server in order to implement the protocol's 'stay-alive' feature (as was discussed in section \ref{protocol_design}).
 
