--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -2,28 +2,28 @@
 
 {\bf James}:
 
-Organisation: Version control, server hosting
-Design: Server design, protocol specification architect
-Implementation: Server, GUI friend list JList renderer, GUI user data listeners.
+Organisation: Version control, server hosting\\
+Design: Server design, protocol specification architect\\
+Implementation: Server, GUI friend list JList renderer, GUI user data listeners.\\
 Report: Protocol design, server design, server implementation, protocol spec in appendix
 
 {\bf Heather}:
 
-Organisation: Quality assurance, report editor, planner, internal meetings manager.
-Design: Interface design, requirements analysis, client structure
-Implementation: GUI front-end, GUI back-end (some networking interface implementation)
+Organisation: Quality assurance, report editor, planner, internal meetings manager.\\
+Design: Interface design, requirements analysis, client structure\\
+Implementation: GUI front-end, GUI back-end (some networking interface implementation)\\
 Report: Introduction, problem definition, conclusion, GUI implementation section, chapter introductions, chapter summaries, editing. 
 
 {\bf Ewan}:
 
-Design: Interface design, requirements analysis
-Documentation: Use cases, interface design (wire frames)
-Implementation: GUI front-end
+Design: Interface design, requirements analysis\\
+Documentation: Use cases, interface design (wire frames)\\
+Implementation: GUI front-end\\
 Report: Design of GUI, features, appendix
 
 {\bf Gordon}:
 
-Organisation: Team secretary
-Design: Client structure, network component, some contributions to protocol specification
-Implementation: Network component, GUI back-end (model and controller: creating windows, routing messages to windows, and managing chats between clients)
+Organisation: Team secretary\\
+Design: Client structure, network component, some contributions to protocol specification\\
+Implementation: Network component, GUI back-end (model and controller: creating windows, routing messages to windows, and managing chats between clients)\\
 Report: Client design, networking design, client implementation, evaluation
