eesh, this sentence needs fixed

--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -1,5 +1,7 @@
 \label{sumlog}
 
+This document outlines the sections each team member was in charge of. Note: throughout the project, team members helped each other out on our areas.
+
 {\bf James}:
 
 Organisation: Version control, server hosting\\
