added MVC intro, and reference to MVC figure

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -14,7 +14,9 @@ However, we faced challenges in adapting an additional networking component to i
 	
 This high level approach allowed us to draw boundaries between components and assign the more detailed design of individual components to team members. We decided a logical split would be to assign two members to the networking aspects of the system (client and server), and two members to the GUI components of the system (the GUI and its model). However, further collaboration was required to allow this design to happen in parallel. This involved planning how the components would talk to one another, as will be discussed in in section \ref{controller}
 
-\subsection {Model-Viewer-Controller Structural Concerns}
+\subsection {Model-Viewer-Controller}
+
+This section will explain how we designed our model, viewer, and controller components in our client. It will also outline some of the interactions between components, as outlined in figure \ref{mvc}. 
 
 \subsubsection {Controller}
 \label{controller}
