removed a couple of unneccessary words

--- a/TP3/dissertation/Design/client.tex
+++ b/TP3/dissertation/Design/client.tex
@@ -16,7 +16,7 @@ This high level approach allowed us to draw boundaries between components and as
 
 \subsection {Model-Viewer-Controller}
 
-This section will explain how we designed our model, viewer, and controller components in our client. It will also outline some of the interactions between components, as outlined in figure \ref{mvc}. 
+This section will explain how we designed our model, viewer, and controller components. It will also outline some of the interactions between components, as outlined in figure \ref{mvc}. 
 
 \subsubsection {Controller}
 \label{controller}
