Edited sentence in contributions section.

--- a/TP3/dissertation/appendix/summarylog.tex
+++ b/TP3/dissertation/appendix/summarylog.tex
@@ -1,6 +1,6 @@
 \label{sumlog}
 
-This document outlines the sections each team member was in charge of. Note: throughout the project, team members helped each other out on our areas.
+This document outlines the sections assigned to each team member. However, throughout the project we helped each other on our sections, so in some places the line between what person did what is more blurred.
 
 {\bf James}:
 
