Edited status section.

--- a/TP3/dissertation/appendix/status.tex
+++ b/TP3/dissertation/appendix/status.tex
@@ -3,20 +3,18 @@
 
 \section{Status}
 
-\label{appenstatus}
-
 The program is stable and does not appear to have any substantial bugs. The program meets the requirements outlined in the problem definition. \\
 
 {\bf List of known issues with GIM:}
 \begin{itemize}
 
-\item{In some instances, a contact will come online and cause the users' contact list to stop displaying contacts. The user can fix this by selecting the "Display Offline Users" option.}
+\item{In some instances, a contact will come online and cause the user's contact list to stop displaying contacts. The user can fix this by selecting the ``Display Offline Users'' option.}
 
-\item{A long line of text will necessitate the user to scroll across the chat area, as oposed to the text wrapping round.}
+\item{A long line of text will force the user to scroll across the chat area, as opposed to the text wrapping round.}
 
-\item{The Block feature acts more like an ignore feature; the user that blocks a contact still appears online that contact.}
+\item{The `block' feature acts more like an ignore feature; the user that blocks a contact still appears online to that contact.}
 
-\item{If a user goes offline while talking to a contact, any messages that the contact sends while the user is offline will be send when they sign back online, assuming the contact remains online. This could be considered a feature of the system, as this it is a partial implementation of offline messages. As the user is not made aware that this will happen, the issue is considered a defect.}
+\item{If a user goes offline while talking to a contact, any messages that the contact sends while the user is offline will be sent when they sign back online, assuming the contact remains online. This could be considered a feature of the system, as this it is a partial implementation of offline messages. As the user is not made aware that this will happen, the issue is considered a defect.}
 
 \end{itemize}
 
