--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -47,7 +47,7 @@ Invitation:
 \item If it is a group chat, client asks server for the user list in the room.
 \end{enumerate}
 
-In retrospect, the trade off between keeping an abstract protocol--which could be used for different styles of implementation--and designing towards our own client and server may have been too high. Aside from the communication between the client and the server, there are complexities within the client code to ensure these events are performed in sequence which left much opportunity for error in the control of threading. For example, a user should not be allowed to send a message before the conversation participant has also joined the room, in the case of a personal chat between steps 6 and 7 (in the ``Creation'' plan). This meant that safeguards had to be considered during this sequence of events to make sure messages were not dropped, while ensuring the user did not have to `wait' for the other user to enter the room before entering a message. This motivated the need for a boolean value, internal to chat windows, indicating whether the chat participant was in the room. While this value is false, messages to be sent are buffered until it turns true. A further issue of synchronization was internal to the code. Since the GUI was running on a separate thread from the incoming networking thread, it was conceivable that an incoming message could occur before the internal room id was updated in step 6. In fact, this issue was subtle enough that it was not recognised until late in development. In retrospect, part of our problem was from not identifying where the Swing event queue needed to be used (as discussed in section \ref{design_impl}), as well as the complex set of events that needed to occur to establish a chat. Throughout this project, we became more aware of the careful approach required when using threads. 
+In retrospect, the trade off between keeping an abstract protocol--which could be used for different styles of implementation--and designing towards our own client and server may have been too high. Aside from the communication between the client and the server, there are complexities within the client code to ensure these events are performed in sequence which left much opportunity for error in the control of threading. For example, a user should not be allowed to send a message before the conversation participant has also joined the room, in the case of a personal chat between steps 6 and 7 (in the ``Creation'' plan). This meant that safeguards had to be considered during this sequence of events to make sure messages were not dropped, while ensuring the user did not have to `wait' for the other user to enter the room before entering a message. This motivated the need for a boolean value, internal to chat windows, indicating whether the chat participant was in the room. While this value is false, messages to be sent are buffered until it turns true. A further issue of synchronization was internal to the code. Since the GUI was running on a separate thread from the incoming networking thread, it was conceivable that an incoming message could occur before the internal room id was updated in step 6. In fact, this issue was subtle enough that it was not recognised until late in development. In retrospect, part of our problem was from not identifying where the Swing event queue needed to be used (as discussed in section \ref{designimpl}), as well as the complex set of events that needed to occur to establish a chat. Throughout this project, we became more aware of the careful approach required when using threads. 
 
 Additionally, the use of room numbers in the protocol made routing messages to the appropriate window challenging. A participant can `leave' a personal chat by closing the window, and the user may then send an additional message. This meant it was important for the internal room id of the user's chat window to be set to `-1' indicating that the participant has left, and the room has to be re-created through the \texttt{:CREATE:} command before the next message may be sent. This involved buffering the message to be sent till the user has joined the new room (as described previously). The server will then select a new room id, resulting in the participant having to create a new chat window and the user's roomid to be updated for the chat window with this participant. The participant's window must not be displayed till the first message is received, which was possible through Swing's setVisible method. This behaviour was not required for group chats, as when a participant leaves a group chat they must be re-invited to continue chat in this group. This was surprising, as we expected group chats to be more challenging to implement. When a user leaves, the group chat updates the user list by using the \texttt{USERS} argument in the protocol's \texttt{:ROOM:} command. On receiving the reply, which includes the room id, the appropriate window's user list is updated.
 
